fixed the bug of dropdown menu not showing up when collapsing it by removing a double data-toggle tag inside and double id tag

--- a/src/assets/css/custom/_my-nav.scss
+++ b/src/assets/css/custom/_my-nav.scss
@@ -1,5 +1,5 @@
 nav li{
-display: inline;
+display: list-item;
 margin-right: 20px;
 font-weight: bold;
 }
@@ -38,6 +38,7 @@ padding-top: 10px;
       position: relative;
       display: inline-block;
       overflow: hiddens;
+    font-weight: bold;
 }
 
 .mybtswitch{
